--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 </head>
-<body class="bg-gray-200 text-gray-900 overflow-hidden">
+<body class="bg-gray-200 text-gray-900 overflow-x-hidden">
   <div id="root"></div>
   <script type="text/babel" src="./components/Sidebar.jsx"></script>
   <script type="text/babel" src="./components/Header.jsx"></script>
