chore(pages): cache-busting dos scripts para refletir alterações no mobile

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 </head>
 <body class="bg-gray-200 text-gray-900 overflow-x-hidden">
   <div id="root"></div>
-  <script type="text/babel" src="./frontend/components/Sidebar.jsx"></script>
-  <script type="text/babel" src="./frontend/components/Header.jsx"></script>
-  <script type="text/babel" src="./frontend/components/Modal.jsx"></script>
-  <script type="text/babel" src="./frontend/components/StatusPill.jsx"></script>
-  <script type="text/babel" src="./frontend/components/Pagination.jsx"></script>
-  <script type="text/babel" src="./frontend/pages/Dashboard.jsx"></script>
-  <script type="text/babel" src="./frontend/pages/Operadores.jsx"></script>
-  <script type="text/babel" src="./frontend/pages/Login.jsx"></script>
-  <script type="text/babel" src="./frontend/app.jsx"></script>
+  <script type="text/babel" src="./frontend/components/Sidebar.jsx?v=20251123"></script>
+  <script type="text/babel" src="./frontend/components/Header.jsx?v=20251123"></script>
+  <script type="text/babel" src="./frontend/components/Modal.jsx?v=20251123"></script>
+  <script type="text/babel" src="./frontend/components/StatusPill.jsx?v=20251123"></script>
+  <script type="text/babel" src="./frontend/components/Pagination.jsx?v=20251123"></script>
+  <script type="text/babel" src="./frontend/pages/Dashboard.jsx?v=20251123"></script>
+  <script type="text/babel" src="./frontend/pages/Operadores.jsx?v=20251123"></script>
+  <script type="text/babel" src="./frontend/pages/Login.jsx?v=20251123"></script>
+  <script type="text/babel" src="./frontend/app.jsx?v=20251123"></script>
 </body>
 </html>
