--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,6 +24,12 @@
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+  <script>
+    (function(){
+      function ensure(src, check, cb){ if(check()){ if(cb) cb(); return } var s=document.createElement('script'); s.src=src; s.onload=function(){ if(cb) cb() }; document.head.appendChild(s) }
+      ensure('https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js', function(){ return !!window.Chart }, function(){ if(!window.Chart){ ensure('https://unpkg.com/chart.js@4.4.1/dist/chart.umd.min.js', function(){ return !!window.Chart }) } })
+    })();
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 </head>
 <body class="bg-gray-200 text-gray-900 overflow-x-hidden">
