Export PNG alinhado ao modelo do Git: tempos verticais dentro das colunas, tipografia Helvetica nos eixos/tooltip, resolução 1920x700, cabeçalho e badge IB iguais ao Git, ajustes de espessura/rotação de rótulos, nome do arquivo dashboard_<MODELO>.png.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,7 @@
   <script type="text/babel" src="./components/Pagination.jsx"></script>
   <script type="text/babel" src="./pages/Dashboard.jsx"></script>
   <script type="text/babel" src="./pages/Operadores.jsx"></script>
-  <script type="text/babel" src="./pages/Login.jsx"></script>
+  <script type="text/babel" src="./pages/Login.jsx?v=2"></script>
   <script type="text/babel" src="./app.jsx"></script>
 </body>
 </html>
