--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,9 @@ function KoteiPage({rows,modelConfigs,setSelectedModel,setPage,koteisByModel,set
                 React.createElement('button',{className:'px-3 py-1.5 rounded bg-blue-600 text-white hover:bg-blue-500',onClick:async()=>{ try{ const rows=Array.isArray(columnsPreview?.rows)? columnsPreview.rows : []; if(rows.length){ await ensureJsPdf(); if(window.jspdf && window.jspdf.jsPDF){ const doc=new window.jspdf.jsPDF({unit:'pt',format:'a4'}); const margin=40; let y=margin; const outName=String(name||'kotei.pdf').replace(/\.[^.]*$/,'.pdf'); doc.setFont('helvetica','bold'); doc.setFontSize(14); doc.text(String(name||'Kotei'), margin, y); y+=12; doc.setFont('helvetica','bold'); doc.setFontSize(11); doc.text('DESCRIÇÃO DA ATIVIDADE', margin, y); doc.text('TEMPO', 520, y, {align:'right'}); y+=12; doc.setFont('helvetica','normal'); for(const r of rows){ const lines=doc.splitTextToSize(String(r.descricao||''), 460); for(let i=0;i<lines.length;i++){ if(y>770){ doc.addPage(); y=margin } doc.text(lines[i], margin, y); if(i===0){ doc.text(String(r.tempo||''), 520, y, {align:'right'}) } y+=12 } } doc.save(outName) } else { const a=document.createElement('a'); a.href=url; a.download=String(name||'kotei.html'); document.body.appendChild(a); a.click(); document.body.removeChild(a) } } else { const a=document.createElement('a'); a.href=url; a.download=String(name||'arquivo.pdf'); document.body.appendChild(a); a.click(); document.body.removeChild(a) } }catch(_){ } }},'Exportar')
               ]),
               React.createElement('object',{data:url,type:'application/pdf',style:{width:'100%',height:'420px'}},
-                React.createElement('a',{href:url,target:'_blank',rel:'noopener noreferrer',className:'inline-block px-3 py-2 m-3 rounded bg-blue-100 text-blue-700'},'Abrir')
+                React.createElement('div',{style:{width:'100%',height:'100%',display:'flex',alignItems:'center',justifyContent:'center'}},
+                  React.createElement('a',{href:url,target:'_blank',rel:'noopener noreferrer',className:'px-4 py-2 rounded-lg bg-blue-100 text-blue-700'},'Abrir')
+                )
               )
             ]) : React.createElement('div',{className:'p-4 text-sm text-gray-600'},'Nenhum PDF selecionado') })()
           ])
@@ -1355,7 +1357,7 @@ function KoteiPage({rows,modelConfigs,setSelectedModel,setPage,koteisByModel,set
             ...postoOptions.map(o=> React.createElement('option',{key:o.posto,value:o.posto},`${o.posto}`))
           ]) ])
         ]),
-        React.createElement('div',null,[ React.createElement('div',{className:'text-sm text-gray-600 mb-1'},'nome do oparador'), React.createElement('input',{value:newForm.nome,readOnly:true,placeholder:'Será preenchido ao escolher o posto',className:'w-full border rounded px-3 py-2 bg-gray-100'}) ]),
+        React.createElement('div',null,[ React.createElement('div',{className:'text-sm text-gray-600 mb-1'},'Nome do Operador'), React.createElement('input',{value:newForm.nome,readOnly:true,placeholder:'Será preenchido ao escolher o posto',className:'w-full border rounded px-3 py-2 bg-gray-100'}) ]),
         React.createElement('div',{className:'text-sm text-gray-600 mb-1'},'Arquivos (PDF)'),
         React.createElement('input',{ref:newFileRef,type:'file',accept:'application/pdf',multiple:true,style:{display:'none'},onChange:(e)=>{ const fs=Array.from(e.target.files||[]); setNewForm(f=> ({ ...f, files: fs })) }}),
         React.createElement('div',{onDragOver:(e)=>{ e.preventDefault() },onDrop:(e)=>{ e.preventDefault(); const fs=Array.from(e.dataTransfer?.files||[]).filter(f=> f.type==='application/pdf'); setNewForm(f=> ({ ...f, files: fs })) },className:'border border-dashed border-gray-300 rounded-lg p-4 text-center bg-gray-50'},[
