--- a/index.html
+++ b/index.html
@@ -188,20 +188,20 @@ function Sidebar({page,setPage,open,setOpen,onLogout}){
     React.createElement('div',{className:'space-y-2'},[
       React.createElement('button',{onClick:()=>{ setPage('dashboard'); setOpen(false) },className:(page==='dashboard'?'bg-white/10 ':'')+'w-full flex items-center gap-3 text-left px-3 py-2 rounded hover:bg-white/10 group'},[
         React.createElement('span',{className:'inline-flex items-center justify-center w-7 h-7 rounded-lg text-white transition-transform group-hover:scale-105'},'▦'),
-        React.createElement('span',{className:'leading-none'},'Dashboard')
+        React.createElement('span',{className:'leading-none uppercase'},'Dashboard')
       ]),
       React.createElement('button',{onClick:()=>{ setPage('operadores'); setOpen(false) },className:(page==='operadores'?'bg-white/10 ':'')+'w-full flex items-center gap-3 text-left px-3 py-2 rounded hover:bg-white/10 group'},[
         React.createElement('span',{className:'inline-flex items-center justify-center w-7 h-7 rounded-lg transition-transform group-hover:scale-105'},'👤'),
-        React.createElement('span',{className:'leading-none'},'Operadores')
+        React.createElement('span',{className:'leading-none uppercase'},'Operadores')
       ]),
       React.createElement('button',{onClick:()=>{ setPage('modelos'); setOpen(false) },className:(page==='modelos'?'bg-white/10 ':'')+'w-full flex items-center gap-3 text-left px-3 py-2 rounded hover:bg-white/10 group'},[
         React.createElement('span',{className:'inline-flex items-center justify-center w-7 h-7 rounded-lg transition-transform group-hover:scale-105'},'🏍️'),
-        React.createElement('span',{className:'leading-none'},'Modelos')
+        React.createElement('span',{className:'leading-none uppercase'},'Modelos')
       ])
       ,
       React.createElement('button',{onClick:()=>{ setPage('kotei'); setOpen(false) },className:(page==='kotei'?'bg-white/10 ':'')+'w-full flex items-center gap-3 text-left px-3 py-2 rounded hover:bg-white/10 group'},[
         React.createElement('span',{className:'inline-flex items-center justify-center w-7 h-7 rounded-lg transition-transform group-hover:scale-105'},'📄'),
-        React.createElement('span',{className:'leading-none'},'Kotei Hyo')
+        React.createElement('span',{className:'leading-none uppercase'},'Kotei Hyo')
       ])
       ,
       React.createElement('div',{className:'border-t border-white/10 my-3'}),
@@ -278,7 +278,7 @@ function Sidebar({page,setPage,open,setOpen,onLogout}){
       React.createElement('div',{className:'border-t border-white/10 my-3'}),
       React.createElement('button',{onClick:()=>setConfirm(true),className:'w-full flex items-center gap-3 text-left px-3 py-2 rounded bg-red-600 text-white hover:bg-red-500'},[
         React.createElement('span',{className:'inline-flex items-center justify-center w-7 h-7 rounded-lg'},'⎋'),
-        React.createElement('span',{className:'leading-none'},'Sair')
+        React.createElement('span',{className:'leading-none uppercase'},'Sair')
       ]),
       React.createElement(Modal,{open:confirm,onClose:()=>setConfirm(false)},[
         React.createElement('div',null,[
@@ -286,7 +286,7 @@ function Sidebar({page,setPage,open,setOpen,onLogout}){
           React.createElement('div',{className:'text-sm text-gray-700 mb-3'},'Deseja encerrar a sessão e voltar para a tela de login?'),
           React.createElement('div',{className:'flex justify-end gap-2'},[
             React.createElement('button',{onClick:()=>setConfirm(false),className:'px-3 py-2 rounded bg-gray-200 hover:bg-gray-300'},'Cancelar'),
-            React.createElement('button',{onClick:()=>{ onLogout?.(); setConfirm(false) },className:'px-3 py-2 rounded bg-red-600 text-white hover:bg-red-500'},'Sair')
+            React.createElement('button',{onClick:()=>{ onLogout?.(); setConfirm(false) },className:'px-3 py-2 rounded bg-red-600 text-white hover:bg-red-500 uppercase'},'Sair')
           ])
         ])
       ])
