--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@ function LoginPage({ onSuccess }){
   const [user,setUser] = React.useState('')
   const [pass,setPass] = React.useState('')
   const [error,setError] = React.useState('')
+  const [caps,setCaps] = React.useState(false)
   function submit(e){ e.preventDefault(); const u=user.trim(); const p=pass.trim(); if(u==='HDA2' && p==='Manaus@01'){ setError(''); onSuccess?.() } else { setError('Credenciais inválidas') } }
   const logoCandidates = [ new URL('./frontend/img/LOGO.svg', document.baseURI).toString(), new URL('./img/LOGO.svg', document.baseURI).toString() ]
   const logoSrc = logoCandidates[0]
@@ -310,9 +311,10 @@ function LoginPage({ onSuccess }){
         (error? React.createElement('div',{style:{marginBottom:'12px',color:'#dc2626',fontSize:'12px'}},error) : null),
         React.createElement('form',{onSubmit:submit},[
           React.createElement('label',{key:'lbl-login'},'Login'),
-          React.createElement('input',{key:'inp-login',type:'text',autoComplete:'off',value:user,onChange:e=>setUser(e.target.value)}),
+          React.createElement('input',{key:'inp-login',type:'text',autoComplete:'off',value:user,onChange:e=>setUser(e.target.value),onKeyUp:e=>{ try{ setCaps(Boolean(e.getModifierState && e.getModifierState('CapsLock'))) }catch(_){ } },onKeyDown:e=>{ try{ setCaps(Boolean(e.getModifierState && e.getModifierState('CapsLock'))) }catch(_){ } },style:{textTransform:'none'}}),
           React.createElement('label',{key:'lbl-senha'},'Senha'),
-          React.createElement('input',{key:'inp-senha',type:'password',autoComplete:'off',value:pass,onChange:e=>setPass(e.target.value)}),
+          React.createElement('input',{key:'inp-senha',type:'password',autoComplete:'off',value:pass,onChange:e=>setPass(e.target.value),onKeyUp:e=>{ try{ setCaps(Boolean(e.getModifierState && e.getModifierState('CapsLock'))) }catch(_){ } },onKeyDown:e=>{ try{ setCaps(Boolean(e.getModifierState && e.getModifierState('CapsLock'))) }catch(_){ } },style:{textTransform:'none'}}),
+          (caps? React.createElement('div',{className:'text-xs text-red-600 mt-1'},'Caps Lock ativado') : null),
           React.createElement('button',{type:'submit'},'Entrar')
         ])
       ]),
