--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     html,body{height:100%}
     body{margin:0;background:#f3f4f6;color:#111827;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,'Helvetica Neue',Arial;text-transform:uppercase}
-    input,textarea,select,button,label,table,th,td,a,h1,h2,h3,h4,h5,h6,p,span,div{ text-transform:inherit }
+    input,textarea,select{ text-transform:none !important }
     .p-4{padding:1rem}
     .flex-center{display:flex;align-items:center;justify-content:center}
     .login-container{min-height:100vh;background:linear-gradient(135deg,#0a0f1c 0%,#0e1627 100%);padding:16px}
@@ -311,9 +311,9 @@ function LoginPage({ onSuccess }){
         (error? React.createElement('div',{style:{marginBottom:'12px',color:'#dc2626',fontSize:'12px'}},error) : null),
         React.createElement('form',{onSubmit:submit},[
           React.createElement('label',{key:'lbl-login'},'Login'),
-          React.createElement('input',{key:'inp-login',type:'text',autoComplete:'off',value:user,onChange:e=>setUser(e.target.value),onKeyUp:e=>{ try{ setCaps(Boolean(e.getModifierState && e.getModifierState('CapsLock'))) }catch(_){ } },onKeyDown:e=>{ try{ setCaps(Boolean(e.getModifierState && e.getModifierState('CapsLock'))) }catch(_){ } },style:{textTransform:'none'}}),
+          React.createElement('input',{key:'inp-login',type:'text',autoComplete:'off',autoCapitalize:'none',spellCheck:false,value:user,onChange:e=>setUser(e.target.value),onKeyUp:e=>{ try{ setCaps(Boolean(e.getModifierState && e.getModifierState('CapsLock'))) }catch(_){ } },onKeyDown:e=>{ try{ setCaps(Boolean(e.getModifierState && e.getModifierState('CapsLock'))) }catch(_){ } },style:{textTransform:'none'}}),
           React.createElement('label',{key:'lbl-senha'},'Senha'),
-          React.createElement('input',{key:'inp-senha',type:'password',autoComplete:'off',value:pass,onChange:e=>setPass(e.target.value),onKeyUp:e=>{ try{ setCaps(Boolean(e.getModifierState && e.getModifierState('CapsLock'))) }catch(_){ } },onKeyDown:e=>{ try{ setCaps(Boolean(e.getModifierState && e.getModifierState('CapsLock'))) }catch(_){ } },style:{textTransform:'none'}}),
+          React.createElement('input',{key:'inp-senha',type:'password',autoComplete:'off',autoCapitalize:'none',spellCheck:false,value:pass,onChange:e=>setPass(e.target.value),onKeyUp:e=>{ try{ setCaps(Boolean(e.getModifierState && e.getModifierState('CapsLock'))) }catch(_){ } },onKeyDown:e=>{ try{ setCaps(Boolean(e.getModifierState && e.getModifierState('CapsLock'))) }catch(_){ } },style:{textTransform:'none'}}),
           (caps? React.createElement('div',{className:'text-xs text-red-600 mt-1'},'Caps Lock ativado') : null),
           React.createElement('button',{type:'submit'},'Entrar')
         ])
