--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ function Dashboard({rows,setRows,selectedModel,setSelectedModel,modelConfigs,kot
       React.createElement('div',{className:'text-sm text-gray-700 mb-4'},`Deseja visualizar o Kotei do posto ${String(promptKotei?.posto||'')} ${String(promptKotei?.nome||'')}?`),
       React.createElement('div',{className:'flex items-center justify-end gap-3'},[
         React.createElement('button',{onClick:()=>setPromptKotei(null),className:'px-4 py-2 rounded-lg bg-gray-200 hover:bg-gray-300 shadow-sm'},'Não'),
-        React.createElement('button',{onClick:async()=>{ try{ const rows=Array.isArray(columnsPreview?.rows)? columnsPreview.rows : []; if(rows.length){ await ensureJsPdf(); if(window.jspdf && window.jspdf.jsPDF){ const doc=new window.jspdf.jsPDF({unit:'pt',format:'a4'}); const margin=40; let y=margin; const pageW = (doc.internal && doc.internal.pageSize && doc.internal.pageSize.getWidth)? doc.internal.pageSize.getWidth() : 595; const pageH = (doc.internal && doc.internal.pageSize && doc.internal.pageSize.getHeight)? doc.internal.pageSize.getHeight() : 842; const tableX = margin; const tableW = pageW - margin*2; const descW = Math.floor(tableW*0.72); const timeW = tableW - descW; const rowPadX = 8; const rowPadY = 6; const lineH = 14; doc.setFont('helvetica','normal'); doc.setFontSize(11); doc.text(`T&P: ${String(promptKotei?.nomeTP||'-')} • Treinador: ${String(promptKotei?.treinador||'-')}`, margin, y); y+=14; function drawHeader(){ doc.setFont('helvetica','bold'); doc.setFontSize(11); doc.setFillColor(249,250,251); doc.rect(tableX, y, tableW, 22, 'F'); doc.text('DESCRIÇÃO DA ATIVIDADE', tableX+rowPadX, y+15); doc.text('TEMPO', tableX+descW+timeW-rowPadX, y+15, {align:'right'}); doc.setLineWidth(0.8); doc.line(tableX, y, tableX+tableW, y); doc.line(tableX, y+22, tableX+tableW, y+22); doc.line(tableX+descW, y, tableX+descW, y+22); y+=22 } drawHeader(); doc.setFont('helvetica','normal'); for(const r of rows){ const desc=String(r.descricao||''); const tempo=String(r.tempo||''); const lines=doc.splitTextToSize(desc, descW - rowPadX*2); let rowH = Math.max(22, lines.length*lineH + rowPadY*2); if(y + rowH > pageH - margin){ doc.addPage(); y=margin; drawHeader() } doc.rect(tableX, y, tableW, rowH); doc.line(tableX+descW, y, tableX+descW, y+rowH); let ty = y + rowPadY + lineH; lines.forEach((ln)=>{ doc.text(ln, tableX+rowPadX, ty); ty += lineH }); doc.text(tempo, tableX+descW+timeW-rowPadX, y + rowPadY + lineH, {align:'right'}); y += rowH } const blobUrl = doc.output('bloburl'); setFullPdf(blobUrl) } else { setFullPdf(String(promptKotei?.url||'')) } } catch(_){ setFullPdf(String(promptKotei?.url||'')) } finally { setPromptKotei(null) } },className:'px-4 py-2 rounded-lg bg-blue-600 text-white shadow-sm'},'Sim')
+        React.createElement('button',{onClick:async()=>{ try{ const rows=Array.isArray(columnsPreview?.rows)? columnsPreview.rows : []; if(rows.length){ const metaLine = `T&P: ${String(promptKotei?.nomeTP||'-')} • Treinador: ${String(promptKotei?.treinador||'-')}`; const url = await makeKoteiPdfBlobUrl(rows, metaLine); setFullPdf(url || String(promptKotei?.url||'')) } else { setFullPdf(String(promptKotei?.url||'')) } } catch(_){ setFullPdf(String(promptKotei?.url||'')) } finally { setPromptKotei(null) } },className:'px-4 py-2 rounded-lg bg-blue-600 text-white shadow-sm'},'Sim')
       ])
     ]),
     (fullPdf? React.createElement('div',{className:'fixed inset-0 bg-black/90 z-[60]'},[
@@ -1125,6 +1125,43 @@ function KoteiPage({rows,modelConfigs,setSelectedModel,setPage,koteisByModel,set
   async function ensureJsPdf(){
     if(window.jspdf && window.jspdf.jsPDF) return
     await new Promise((resolve)=>{ const s=document.createElement('script'); s.src='https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js'; s.onload=resolve; s.onerror=resolve; document.head.appendChild(s) })
+  }
+  async function makeKoteiPdfBlobUrl(rows, metaLine){
+    try{
+      await ensureJsPdf();
+      if(!(window.jspdf && window.jspdf.jsPDF)) return ''
+      const doc=new window.jspdf.jsPDF({unit:'pt',format:'a4'})
+      const margin=40
+      let y=margin
+      const pageW = (doc.internal && doc.internal.pageSize && doc.internal.pageSize.getWidth)? doc.internal.pageSize.getWidth() : 595
+      const pageH = (doc.internal && doc.internal.pageSize && doc.internal.pageSize.getHeight)? doc.internal.pageSize.getHeight() : 842
+      const tableX = margin
+      const tableW = pageW - margin*2
+      const descW = Math.floor(tableW*0.72)
+      const timeW = tableW - descW
+      const rowPadX = 8
+      const rowPadY = 6
+      const lineH = 14
+      doc.setFont('helvetica','bold'); doc.setFontSize(14); doc.text(String('Kotei'), margin, y); y+=16
+      if(metaLine){ doc.setFont('helvetica','normal'); doc.setFontSize(11); doc.text(String(metaLine), margin, y); y+=14 }
+      function drawHeader(){ doc.setFont('helvetica','bold'); doc.setFontSize(11); doc.setFillColor(249,250,251); doc.rect(tableX, y, tableW, 22, 'F'); doc.text('DESCRIÇÃO DA ATIVIDADE', tableX+rowPadX, y+15); doc.text('TEMPO', tableX+descW+timeW-rowPadX, y+15, {align:'right'}); doc.setLineWidth(0.8); doc.line(tableX, y, tableX+tableW, y); doc.line(tableX, y+22, tableX+tableW, y+22); doc.line(tableX+descW, y, tableX+descW, y+22); y+=22 }
+      drawHeader()
+      doc.setFont('helvetica','normal')
+      for(const r of rows){
+        const desc=String(r.descricao||'')
+        const tempo=String(r.tempo||'')
+        const lines=doc.splitTextToSize(desc, descW - rowPadX*2)
+        let rowH = Math.max(22, lines.length*lineH + rowPadY*2)
+        if(y + rowH > pageH - margin){ doc.addPage(); y=margin; drawHeader() }
+        doc.rect(tableX, y, tableW, rowH)
+        doc.line(tableX+descW, y, tableX+descW, y+rowH)
+        let ty = y + rowPadY + lineH
+        lines.forEach((ln)=>{ doc.text(ln, tableX+rowPadX, ty); ty += lineH })
+        doc.text(tempo, tableX+descW+timeW-rowPadX, y + rowPadY + lineH, {align:'right'})
+        y += rowH
+      }
+      return doc.output('bloburl')
+    }catch(_){ return '' }
   }
   async function extractPdfColumns(file){
     try{
